--- a/deskutils/xdg-desktop-portal-lxqt/Makefile
+++ b/deskutils/xdg-desktop-portal-lxqt/Makefile
@@ -1,8 +1,8 @@
 PORTNAME=	xdg-desktop-portal-lxqt
-PORTVERSION=	1.0.1
+PORTVERSION=	1.0.2
 CATEGORIES=	deskutils wayland
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Portal frontend service for LXQT
 WWW=		https://github.com/flatpak/xdg-desktop-portal
 
