--- a/security/lxqt-sudo/Makefile
+++ b/security/lxqt-sudo/Makefile
@@ -3,7 +3,7 @@ PORTVERSION=	2.0.0
 CATEGORIES=	security
 MASTER_SITES=	LXQT
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	GUI frontend to su/sudo/doas for LXQt desktop
 WWW=		https://lxqt-project.org
 
