--- a/audio/pavucontrol-qt/Makefile
+++ b/audio/pavucontrol-qt/Makefile
@@ -3,7 +3,7 @@ PORTVERSION= 	2.0.0
 CATEGORIES=	audio
 MASTER_SITES=	LXQT/${PORTNAME}
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	PulseAudio mixer in Qt6
 WWW=		https://github.com/lxqt/pavucontrol-qt/
 
@@ -11,7 +11,7 @@ LICENSE=	GPLv2
 
 LIB_DEPENDS=	libpulse.so:audio/pulseaudio
 
-USES=		cmake compiler:c++14-lang gettext-runtime localbase:ldflags \
+USES=		cmake compiler:c++17-lang gettext-runtime localbase:ldflags \
 		lxqt:2 qt:6 perl5 pkgconfig tar:xz gnome
 USE_PERL5=	build
 USE_QT=		base:run tools:build
