--- a/devel/liblxqt/Makefile
+++ b/devel/liblxqt/Makefile
@@ -3,7 +3,7 @@ PORTVERSION=	2.0.0
 CATEGORIES=	devel
 MASTER_SITES=	LXQT
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Shared library for LXQt applications
 WWW=		https://github.com/lxqt/liblxqt
 
@@ -11,7 +11,7 @@ LICENSE=	LGPL21+
 
 LIB_DEPENDS=	libpolkit-qt6-core-1.so:sysutils/polkit-qt-1@qt6
 
-USES=		cmake compiler:c++14-lang gnome kde:6 lxqt:2 \
+USES=		cmake compiler:c++17-lang gnome kde:6 lxqt:2 \
 		pkgconfig qt:6 tar:xz xorg
 USE_GNOME=	glib20
 USE_QT=		base:run tools:build svg
