--- a/devel/libqtxdg/Makefile
+++ b/devel/libqtxdg/Makefile
@@ -3,13 +3,13 @@ PORTVERSION=	3.12.0
 CATEGORIES=	devel
 MASTER_SITES=	LXQT/${PORTNAME}
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Qt implementation of freedesktop.org xdg specs
 WWW=		https://github.com/lxde/libqtxdg
 
 LICENSE=	LGPL21+
 
-USES=		cmake compiler:c++14-lang gnome lxqt:1 pkgconfig qt:5 tar:xz
+USES=		cmake compiler:c++17-lang gnome lxqt:1 pkgconfig qt:5 tar:xz
 USE_LDCONFIG=	yes
 USE_GNOME=	glib20
 USE_QT=		buildtools:build qmake:build core dbus gui svg widgets \
