--- a/x11/libfm-qt/Makefile
+++ b/x11/libfm-qt/Makefile
@@ -3,7 +3,7 @@ PORTVERSION=	1.4.0
 CATEGORIES=	x11
 MASTER_SITES=	LXQT
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Qt port of libfm
 WWW=		https://github.com/lxqt/libfm-qt
 
