--- a/x11/libfm-qt6/Makefile
+++ b/x11/libfm-qt6/Makefile
@@ -1,9 +1,9 @@
 PORTNAME=	libfm-qt6
-PORTVERSION=	2.0.0
+PORTVERSION=	2.0.2
 CATEGORIES=	x11
 MASTER_SITES=	LXQT/${PORTNAME:S/6//}
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Qt6 port of libfm
 WWW=		https://github.com/lxqt/libfm-qt
 
@@ -15,7 +15,7 @@ LIB_DEPENDS=	libmenu-cache.so:x11/menu-cache \
 BUILD_DEPENDS=	lxqt-menu-data>=2.0.0:x11/lxqt-menu-data
 RUN_DEPENDS=	lxqt-menu-data>=2.0.0:x11/lxqt-menu-data
 
-USES=		cmake compiler:c++14-lang gettext-runtime lxqt:2 perl5 pkgconfig \
+USES=		cmake compiler:c++17-lang gettext-runtime lxqt:2 perl5 pkgconfig \
 		qt:6 gnome shared-mime-info tar:xz xorg
 USE_PERL5=	build
 USE_QT=		base:run tools:build
