--- a/x11/screengrab/Makefile
+++ b/x11/screengrab/Makefile
@@ -3,7 +3,7 @@ PORTVERSION=	2.8.0
 CATEGORIES=	x11
 MASTER_SITES=	LXQT
 
-MAINTAINER=	jsm@FreeBSD.org
+MAINTAINER=	lxqt@FreeBSD.org
 COMMENT=	Screen dump utility
 WWW=		https://github.com/lxqt/screengrab
 
